--- a/Projects.html
+++ b/Projects.html
@@ -12,10 +12,10 @@
           <div class="left">Suyog's Portfolio</div>
           <div class="right">
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="/">About</a></li>
               <li><a href="/">Services</a></li>
-              <li><a href="/">Projects</a></li>
+              <li><a href="Projects.html">Projects</a></li>
               <li><a href="/">Contact Me</a></li>
             </ul>
           </div>
