--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-          <div class="left">Suyog's Portfolio</div>
+          <div class="left">Assignments</div>
           <div class="right">
             <ul>
               <li><a href="index.html">Home</a></li>
