--- a/Vclone/index.html
+++ b/Vclone/index.html
@@ -11,6 +11,37 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      data-purpose="Layout StyleSheet"
+      title="Web Awesome"
+      href="/css/app-wa-462d1fe84b879d730fe2180b0e0354e0.css?vsn=d"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/all.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-thin.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-solid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-regular.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-light.css"
+    />
   </head>
   <body>
     <header>
@@ -31,10 +62,26 @@
         <button class="btn">Business</button>
       </nav>
     </header>
-    <div>
-        <video autoplay loop> 
-            <source src="video/viber-vid.mp4" type="video/mp4">
-        </video>
-    </div>
+    <main>
+      <section class="main-section">
+        <div style="position: absolute">
+          <video autoplay loop>
+            <source src="video/viber-vid.mp4" type="video/mp4" />
+          </video>
+        </div>
+        <span class="viber-logo">
+          <i class="fa-brands fa-viber"></i>
+        </span>
+        <div class="hero-content" style="position: relative">
+          <h1>Free and secure calls and messages to anyone, anywhere</h1>
+          <h2>Keep your conversations going no matter where you are.</h2>
+        </div>
+        <div>
+          <button style="position: relative" class="download-btn">
+            Download Viber
+          </button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
