--- a/Vclone/index.html
+++ b/Vclone/index.html
@@ -90,23 +90,25 @@
             options when it comes to expressing yourself
           </p>
         </div>
-        <div class="nxt-page">
-          <img class="img-fluid" src="Images/Videocall-1.gif" alt="gif">
-          <h3>Voice and video calls</h3>
-          <p>High-quality calls for a quick “hello” or a much-needed face-to-face</p>
-        </div>
-        <div class="nxt-page">
-          <img  class="img-fluid" src="Images/Group_chat_258_236.gif" alt="gif">
-          <h3>Group chats & calls</h3>
-          <p>Like and reply to messages in group chats or start a group video or voice call instantly</p>
-        </div>
-        <div class="nxt-page"><img  class="img-fluid" src="Images/Legcat.1517733927.gif" alt="gif">
-        <h3>Stickers & GIFs</h3>
-        <p>Endless stickers and GIFs for every possible expression. Not enough? Create your own</p>
-        </div>
-        <div class="nxt-page"><img  class="img-fluid" src="Images/multi.gif" alt="gif">
-        <h3>On mobile & desktop</h3>
-        <p>Chats are 100% synced between devices, including 1-tap transfer of calls</p>
+        <div class="second-pg">
+          <div class="nxt-page">
+            <img class="img-fluid" src="Images/Videocall-1.gif" alt="gif">
+            <h3>Voice and video calls</h3>
+            <p>High-quality calls for a quick “hello” or a much-needed face-to-face</p>
+          </div>
+          <div class="nxt-page">
+            <img  class="img-fluid" src="Images/Group_chat_258_236.gif" alt="gif">
+            <h3>Group chats & calls</h3>
+            <p>Like and reply to messages in group chats or start a group video or voice call instantly</p>
+          </div>
+          <div class="nxt-page"><img  class="img-fluid" src="Images/Legcat.1517733927.gif" alt="gif">
+          <h3>Stickers & GIFs</h3>
+          <p>Endless stickers and GIFs for every possible expression. Not enough? Create your own</p>
+          </div>
+          <div class="nxt-page"><img  class="img-fluid" src="Images/multi.gif" alt="gif">
+          <h3>On mobile & desktop</h3>
+          <p>Chats are 100% synced between devices, including 1-tap transfer of calls</p>
+          </div>
         </div>
         <div class="nxt-page"><button>Discover More Features</button></div>
       </section>
