--- a/Vclone/index.html
+++ b/Vclone/index.html
@@ -110,7 +110,10 @@
           <p>Chats are 100% synced between devices, including 1-tap transfer of calls</p>
           </div>
         </div>
-        <div class="nxt-page"><button>Discover More Features</button></div>
+        <div class="btn-box">
+          <button class="discover-btn">Discover More Features
+          </button>
+        </div>
       </section>
     </main>
   </body>
