--- a/Vclone/index.html
+++ b/Vclone/index.html
@@ -82,78 +82,88 @@
           </button>
         </div>
       </section>
-      <section>
-        <div class="feature-title">
-          <h2>More than messaging</h2>
+
+      <div class="feature-title">
+        <h2>More than messaging</h2>
+        <p>
+          With a variety of calling and messaging features, you have endless
+          options when it comes to expressing yourself
+        </p>
+      </div>
+      <div class="second-pg">
+        <div class="nxt-page">
+          <img class="img-fluid" src="Images/Videocall-1.gif" alt="gif" />
+          <h3>Voice and video calls</h3>
           <p>
-            With a variety of calling and messaging features, you have endless
-            options when it comes to expressing yourself
+            High-quality calls for a quick “hello” or a much-needed face-to-face
           </p>
         </div>
-        <div class="second-pg">
-          <div class="nxt-page">
-            <img class="img-fluid" src="Images/Videocall-1.gif" alt="gif" />
-            <h3>Voice and video calls</h3>
-            <p>
-              High-quality calls for a quick “hello” or a much-needed
-              face-to-face
-            </p>
-          </div>
-          <div class="nxt-page">
-            <img
-              class="img-fluid"
-              src="Images/Group_chat_258_236.gif"
-              alt="gif"
-            />
-            <h3>Group chats & calls</h3>
-            <p>
-              Like and reply to messages in group chats or start a group video
-              or voice call instantly
-            </p>
-          </div>
-          <div class="nxt-page">
-            <img
-              class="img-fluid"
-              src="Images/Legcat.1517733927.gif"
-              alt="gif"
-            />
-            <h3>Stickers & GIFs</h3>
-            <p>
-              Endless stickers and GIFs for every possible expression. Not
-              enough? Create your own
-            </p>
-          </div>
-          <div class="nxt-page">
-            <img class="img-fluid" src="Images/multi.gif" alt="gif" />
-            <h3>On mobile & desktop</h3>
-            <p>
-              Chats are 100% synced between devices, including 1-tap transfer of
-              calls
-            </p>
-          </div>
+        <div class="nxt-page">
+          <img
+            class="img-fluid"
+            src="Images/Group_chat_258_236.gif"
+            alt="gif"
+          />
+          <h3>Group chats & calls</h3>
+          <p>
+            Like and reply to messages in group chats or start a group video or
+            voice call instantly
+          </p>
         </div>
-        <div class="btn-box">
-          <button class="discover-btn">Discover More Features</button>
+        <div class="nxt-page">
+          <img class="img-fluid" src="Images/Legcat.1517733927.gif" alt="gif" />
+          <h3>Stickers & GIFs</h3>
+          <p>
+            Endless stickers and GIFs for every possible expression. Not enough?
+            Create your own
+          </p>
         </div>
-      </section>
+        <div class="nxt-page">
+          <img class="img-fluid" src="Images/multi.gif" alt="gif" />
+          <h3>On mobile & desktop</h3>
+          <p>
+            Chats are 100% synced between devices, including 1-tap transfer of
+            calls
+          </p>
+        </div>
+      </div>
+      <div class="btn-box">
+        <button class="discover-btn">Discover More Features</button>
+      </div>
 
-      <section>
-        <div class="new-content">
-          <div class="mob-img">
-            <img src="Images/New-social.png" alt="mobile-phone" />
-          </div>
-          <div class="mob-text">
-            <h2>The New Social</h2>
-            <p>
-              Communities on Viber bring people together — Take part in a
-              conversation on any topic you’re passionate about.
-            </p>
-          </div>
+      <!-- new contenxt -->
+      <div class="new-content">
+        <div class="mob-img">
+          <img style="vertical-align: middle;" src="Images/New-social.png" alt="mobile-phone" />
+        </div>
+        <div class="mob-text">
+          <h2>The New Social</h2>
+          <p>
+            Communities on Viber bring people together — Take part in a
+            conversation on any topic you’re passionate about.
+          </p>
           <div class="mob-btn">
             <button>More About Communities</button>
           </div>
         </div>
-      </section>
+      </div>
+
+      <div class="new-content2">
+          <div class="secure-head">
+            <h2>Always secure<img src="Images/secure-tag.png" alt="secure-img"></h2>
+            <p>
+              Our mission is to protect your privacy so that you never have to
+              think twice about what you can or can't share when you're using
+              Viber.
+            </p>
+            <div class="mob-btn2">
+              <button>More About Security</button>
+            </div>
+          </div>
+          <div class="mob-img2">
+            <img src="Images/Security_white_1X.png" alt="mob">
+          </div>
+        </div>
     </main>
   </body>
 </html>
