--- a/Vclone/index.html
+++ b/Vclone/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap"
       rel="stylesheet"
     />
     <link
@@ -134,7 +134,11 @@
       <!-- new contenxt -->
       <div class="new-content">
         <div class="mob-img">
-          <img style="vertical-align: middle;" src="Images/New-social.png" alt="mobile-phone" />
+          <img
+            style="vertical-align: middle"
+            src="Images/New-social.png"
+            alt="mobile-phone"
+          />
         </div>
         <div class="mob-text">
           <h2>The New Social</h2>
@@ -149,21 +153,84 @@
       </div>
 
       <div class="new-content2">
-          <div class="secure-head">
-            <h2>Always secure<img src="Images/secure-tag.png" alt="secure-img"></h2>
-            <p>
-              Our mission is to protect your privacy so that you never have to
-              think twice about what you can or can't share when you're using
-              Viber.
-            </p>
-            <div class="mob-btn2">
-              <button>More About Security</button>
-            </div>
-          </div>
-          <div class="mob-img2">
-            <img src="Images/Security_white_1X.png" alt="mob">
+        <div class="secure-head">
+          <h2>
+            Always secure<img src="Images/secure-tag.png" alt="secure-img" />
+          </h2>
+          <p>
+            Our mission is to protect your privacy so that you never have to
+            think twice about what you can or can't share when you're using
+            Viber.
+          </p>
+          <div class="mob-btn2">
+            <button>More About Security</button>
           </div>
         </div>
+        <div class="mob-img2">
+          <img src="Images/Security_white_1X.png" alt="mob" />
+        </div>
+      </div>
+
+      <div class="content-wrap">
+        <div class="v-container">
+          <img src="Images/vlogo.png" alt="viber-logo" />
+          <h2>Don't have Viber yet?</h2>
+        </div>
+        <div class="v-button">
+          <button>Download Viber</button>
+        </div>
+      </div>
+
+      <footer class="content-info">
+        <div class="container">
+          <div class="row">
+            <section class="widget col 1">
+              <h3>VIBER</h3>
+              <div class="viber-contents 1">
+                <ul>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Communities</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Security</a></li>
+                  <li><a href="#">Viber Out</a></li>
+                  <li><a href="#">Business</a></li>
+                  <li><a href="#">Support</a></li>
+                </ul>
+              </div>
+            </section>
+            
+            <section class="widgets col 2">
+              <h3>COMPANY</h3>
+              <div class="viber-contents 2">
+                <ul>
+                  <li><a href="#">About Viber</a></li>
+                  <li><a href="#">Brand Center</a></li>
+                  <li><a href="#">Careers</a></li>
+                  <li><a href="#">Terms & Policies</a></li>
+                  <li><a href="#">Terms of Services</a></li>
+                  <li><a href="#">Privary Policy</a></li>
+                  <li><a href="#">Ads Policy</a></li>
+                  <li><a href="#">US Do Not Sell or Share My Personal Information</a></li>
+                  <li><a href="#">Caller ID Opt Out</a></li>
+                </ul>
+              </div>
+            </section>
+            <section>
+              <h3>DOWNLOAD</h3>
+              <div class="viber-contents 3">
+                <ul>
+                  <li><a href="#">Android</a></li>
+                  <li><a href="#">IPhone & IPad</a></li>
+                  <li><a href="#">Windows PC</a></li>
+                  <li><a href="#">Mac</a></li>
+                  <li><a href="#">Linux</a></li>
+                </ul>
+              </div>
+            </section>
+          </div>
+        </div>
+      </footer>
+
     </main>
   </body>
 </html>
