--- a/Vclone/index.html
+++ b/Vclone/index.html
@@ -184,9 +184,9 @@
       <footer class="content-info">
         <div class="container">
           <div class="row">
-            <section class="widget col 1">
+            <section class="widget-col-1">
               <h3>VIBER</h3>
-              <div class="viber-contents 1">
+              <div class="viber-content-1">
                 <ul>
                   <li><a href="#">Features</a></li>
                   <li><a href="#">Communities</a></li>
@@ -199,9 +199,9 @@
               </div>
             </section>
             
-            <section class="widgets col 2">
+            <section class="widgets-col-2">
               <h3>COMPANY</h3>
-              <div class="viber-contents 2">
+              <div class="viber-content-2">
                 <ul>
                   <li><a href="#">About Viber</a></li>
                   <li><a href="#">Brand Center</a></li>
@@ -217,7 +217,7 @@
             </section>
             <section>
               <h3>DOWNLOAD</h3>
-              <div class="viber-contents 3">
+              <div class="viber-content-3">
                 <ul>
                   <li><a href="#">Android</a></li>
                   <li><a href="#">IPhone & IPad</a></li>
