--- a/Vclone/index.html
+++ b/Vclone/index.html
@@ -182,55 +182,100 @@
       </div>
 
       <footer class="content-info">
-        <div class="container">
-          <div class="row">
-            <section class="widget-col-1">
-              <h3>VIBER</h3>
-              <div class="viber-content-1">
-                <ul>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Communities</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Security</a></li>
-                  <li><a href="#">Viber Out</a></li>
-                  <li><a href="#">Business</a></li>
-                  <li><a href="#">Support</a></li>
-                </ul>
-              </div>
-            </section>
-            
-            <section class="widgets-col-2">
-              <h3>COMPANY</h3>
-              <div class="viber-content-2">
-                <ul>
-                  <li><a href="#">About Viber</a></li>
-                  <li><a href="#">Brand Center</a></li>
-                  <li><a href="#">Careers</a></li>
-                  <li><a href="#">Terms & Policies</a></li>
-                  <li><a href="#">Terms of Services</a></li>
-                  <li><a href="#">Privary Policy</a></li>
-                  <li><a href="#">Ads Policy</a></li>
-                  <li><a href="#">US Do Not Sell or Share My Personal Information</a></li>
-                  <li><a href="#">Caller ID Opt Out</a></li>
-                </ul>
-              </div>
-            </section>
-            <section>
-              <h3>DOWNLOAD</h3>
-              <div class="viber-content-3">
-                <ul>
-                  <li><a href="#">Android</a></li>
-                  <li><a href="#">IPhone & IPad</a></li>
-                  <li><a href="#">Windows PC</a></li>
-                  <li><a href="#">Mac</a></li>
-                  <li><a href="#">Linux</a></li>
-                </ul>
-              </div>
-            </section>
+        <div class="wrapper">
+        <div class="row">
+          <section class="widget-col-1">
+            <h3>VIBER</h3>
+            <div class="viber-content-1">
+              <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Communities</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Security</a></li>
+                <li><a href="#">Viber Out</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">Support</a></li>
+              </ul>
+            </div>
+          </section>
+
+          <section class="widgets-col-2">
+            <h3>COMPANY</h3>
+            <div class="viber-content-2">
+              <ul>
+                <li><a href="#">About Viber</a></li>
+                <li><a href="#">Brand Center</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Terms & Policies</a></li>
+                <li><a href="#">Terms of Services</a></li>
+                <li><a href="#">Privary Policy</a></li>
+                <li><a href="#">Ads Policy</a></li>
+                <li>
+                  <a href="#"
+                    >US Do Not Sell or Share My Personal Information</a
+                  >
+                </li>
+                <li><a href="#">Caller ID Opt Out</a></li>
+              </ul>
+            </div>
+          </section>
+          <section>
+            <h3>DOWNLOAD</h3>
+            <div class="viber-content-3">
+              <ul>
+                <li><a href="#">Android</a></li>
+                <li><a href="#">IPhone & IPad</a></li>
+                <li><a href="#">Windows PC</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">Linux</a></li>
+              </ul>
+            </div>
+          </section>
+          <div class="dropdown-menu">
+            <select name="Language">
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+              <option value="English">English</option>
+            </select>
+          </div>
+        </div>
+        <div class="icons">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <div class="footer-text">
+            <p>© 2024 Viber Media S.à r.l.</p>
+          </div>
+        </div>
+      </div>
+
+        <div class="footer-nav">
+          <div class="footer-logo">
+            <img src="Images/footer-logo-gradient.png" alt="viber-logo">
+          </div>
+          <div class="extra-pages">
+            <ul>
+              <li><a href="#">Rakuten Viki</a></li>
+              <li><a href="#">Rakuten Kobo</a></li>
+              <li><a href="#">Rakuten Travek</a></li>
+              <li><a href="#">Rakuten Marketing</a></li>
+              <li><a href="#">Rakuten Insight</a></li>
+              <li><a href="#">Rakuten TV</a></li>
+              <li><a href="#">About Rakuten</a></li>
+            </ul>
           </div>
         </div>
       </footer>
-
     </main>
   </body>
 </html>
