--- a/index.html
+++ b/index.html
@@ -31,12 +31,32 @@
       <!--Body start-->
 
       <div class="main-body">
+        <div class="profile">
+          <img class="henci" src="images/henci 2.jpg" alt="my-photo" />
+        </div>
         <div class="body-container">
           <h1>Hey, I'm Suyog.</h1>
-          <p>I'm a student currently studying BSc.CSIT</p>
-        </div>
-        <div class="image">
-          <img src="images/My project.png" alt="my-photo" />
+          <p>
+            I'm a student currently studying BSc.CSIT at St.Lawrence College
+          </p>
+          <div class="info-1">
+            <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia porro
+              adipisci eaque molestiae cupiditate ducimus veritatis repellat
+              exercitationem, atque amet non debitis minima blanditiis voluptate
+              quod hic voluptates nemo ipsum.
+            </p>
+          </div>
+          <div class="info-2">
+            <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia porro
+              adipisci eaque molestiae cupiditate ducimus veritatis repellat
+              exercitationem, atque amet non debitis minima blanditiis voluptate
+              quod hic voluptates nemo ipsum.
+            </p>
+          </div>
         </div>
       </div>
     </div>
