--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      data-purpose="Layout StyleSheet"
+      title="Web Awesome"
+      href="/css/app-wa-462d1fe84b879d730fe2180b0e0354e0.css?vsn=d"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/all.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-thin.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-solid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-regular.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-light.css"
+    />
   </head>
   <body>
     <!--Header Start-->
@@ -42,22 +73,41 @@
           <div class="info-1">
             <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia porro
-              adipisci eaque molestiae cupiditate ducimus veritatis repellat
-              exercitationem, atque amet non debitis minima blanditiis voluptate
-              quod hic voluptates nemo ipsum.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+              porro adipisci eaque molestiae cupiditate ducimus veritatis
+              repellat exercitationem, atque amet non debitis minima blanditiis
+              voluptate quod hic voluptates nemo ipsum.
             </p>
           </div>
           <div class="info-2">
             <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia porro
-              adipisci eaque molestiae cupiditate ducimus veritatis repellat
-              exercitationem, atque amet non debitis minima blanditiis voluptate
-              quod hic voluptates nemo ipsum.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+              porro adipisci eaque molestiae cupiditate ducimus veritatis
+              repellat exercitationem, atque amet non debitis minima blanditiis
+              voluptate quod hic voluptates nemo ipsum.
             </p>
           </div>
         </div>
+      </div>
+      <!--Footer Strat-->
+
+      <div class="socials">
+        <div>
+          <a href="restricted.html"><i class="fa-solid fa-envelope"></i></a>
+        </div>
+        <div>
+          <a href="restricted.html"><i class="fa-brands fa-github"></i></a>
+        </div>
+        <div>
+          <a href="restricted.html"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div>
+          <a href="restricted.html"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+      </div>
+      <div>
+        <hr class="border" />
       </div>
     </div>
   </body>
