--- a/restricted.html
+++ b/restricted.html
@@ -29,7 +29,8 @@
         background-color: rgb(251, 134, 53);
         margin: 4px 2px;
         outline: none;
-        transition: transform 0.3s ease-out;
+        transition: transform 0.3s ease-in-out;
+
       }
       .return button a {
         text-decoration: none;
@@ -37,10 +38,12 @@
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
+          /* display: block; */
       }
       .return button:hover {
         background-color: rgb(252, 140, 61);
-        padding: 16px 57px;
+        transform: scale(1.1) ;
+        /* padding: 16px 57px; */
         /* border-radius: 35px; */
       }
       .return button:active {
