--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/fox.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="images/tab-icon.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -101,13 +104,17 @@
           <a href="restricted.html"><i class="fa-solid fa-envelope"></i></a>
         </div>
         <div>
-          <a href="restricted.html"><i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/suyogmgr" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </div>
         <div>
           <a href="restricted.html"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div>
-          <a href="restricted.html"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.facebook.com/suyog.magar.796/" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
         </div>
       </div>
       <div>
