--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
+    <title>Suyog Rana Magar</title>
+    <link rel="icon" href="./images/logo.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="small.css" />
